fix(highlight): fix template literal color in dark mode

--- a/src/styles/highlightjs.css
+++ b/src/styles/highlightjs.css
@@ -41,3 +41,7 @@ html.dark .hljs-comment {
 html.dark .hljs-tag {
     color: #7ee787;
 }
+
+html.dark .hljs-subst {
+    color: #79c0ff;
+}
